--- a/tickets-booking/src/main/webapp/resources/style/style.css
+++ b/tickets-booking/src/main/webapp/resources/style/style.css
@@ -1,36 +1,34 @@
-#login {
-	width: 200px;
+#loginForm {
+	width: 350px;
 	margin: auto;
 	text-align: center;
 }
 
 #logo {
 	width: 458px;
-	height:144px;
+	height: 144px;
 	margin: auto;
 }
 
-#wrapper{
-	width: 330px;
-	height:300px;
+#loginPageWrapper {
 	margin: auto;
+	margin-top: 10%;
 }
 
-#logo img{
-	width:458px;
+#logo img {
+	width: 458px;
 	height: 144px;
 }
 
-#popCorn{
-	margin-top:40px;
-	width:120px;
+#popCorn {
+	width: 120px;
 	height: 108px;
 	display: inline;
 	float: left;
 }
 
-#popCorn img{
-	width:120px;
+#popCorn img {
+	width: 120px;
 	height: 108px;
 	float: left;
 	display: inline;
@@ -41,26 +39,60 @@
 	margin-bottom: 10px;
 }
 
-#login{
-	float:right;
-}
-
 .errorMessage {
 	color: red;
 }
 
-#registration {
+#registrationFormWrapper {
 	width: 400px;
 	margin: auto;
 	text-align: center;
+	margin-top: 10%;
 }
 
-#registration input {
+#registrationFormWrapper input {
 	width: 200px;
 }
 
-#filter{
+#filter {
 	width: 1000px;
 	margin: auto;
 	text-align: center;
+}
+
+#registrationLink {
+	font-size: medium;
+	text-align: center;
+}
+
+#ticketsFormatLogo img {
+	width: 50px;
+	height: 50px;
+}
+
+#ticketsFormatLogo {
+	width: 150px;
+	margin: auto;
+	margin-top: 40px;
+}
+
+#availableTicketsTable,#bookedTicketsTable {
+	margin: auto;
+}
+
+#noTicketsMessage {
+	margin-top: 20px;
+}
+
+.link {
+	width: 70px;
+	background-color: #1FC9F3;
+}
+
+
+.link a {
+	text-decoration: none;
+	color: white;
+	background-color: #1FC9F3;
+	
 }
