--- a/tickets-booking/src/main/webapp/resources/style/style.css
+++ b/tickets-booking/src/main/webapp/resources/style/style.css
@@ -1,7 +1,21 @@
+
+
 #loginForm {
 	width: 350px;
 	margin: auto;
 	text-align: center;
+}
+
+#logout {
+	float: right;
+	
+}
+
+#logout a{
+	background-color: orange;
+	text-decoration: none;
+	color: white;
+	
 }
 
 #logo {
@@ -89,10 +103,8 @@
 	display: inline;
 }
 
-
 .link a {
 	text-decoration: none;
 	color: white;
 	background-color: #1FC9F3;
-	
 }
