--- a/tickets-booking/src/main/webapp/resources/style/style.css
+++ b/tickets-booking/src/main/webapp/resources/style/style.css
@@ -1,5 +1,3 @@
-
-
 #loginForm {
 	width: 350px;
 	margin: auto;
@@ -8,14 +6,12 @@
 
 #logout {
 	float: right;
-	
 }
 
-#logout a{
+#logout a {
 	background-color: orange;
 	text-decoration: none;
 	color: white;
-	
 }
 
 #logo {
@@ -74,6 +70,29 @@
 	text-align: center;
 }
 
+#filmInfo {
+	width: 1000px;
+	margin: auto;
+	text-align: center;
+	font-size: small;
+}
+
+table#filmInfo tr, table#filmInfo td, table#filmInfo th {
+	border: 1px solid black;
+}
+
+table#filmInfo td#filmDescription{
+	text-align: left;
+}
+
+#filmInfoHeader{
+	background-color: orange;
+}
+
+table#filmInfo {
+	border-collapse: collapse;
+}
+
 #registrationLink {
 	font-size: medium;
 	text-align: center;
@@ -101,6 +120,7 @@
 .link {
 	background-color: #1FC9F3;
 	display: inline;
+	margin-right: 5px;
 }
 
 .link a {
